fix scrollbar toolbox, se elimina afig

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -187,7 +187,7 @@ $DisabledFont: #706C61;
 .board-container::-webkit-scrollbar-thumb {
     border-radius: 8px;
     border: 2px solid white; /* should match background, can't be transparent */
-    background-color: rgba(0, 0, 0, .5);
+    background-color: grey;
 }
 
 .pipe-base {
